lodaing page z-index fix

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,7 +24,7 @@ body {
   left: 0;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   height: 100vh;
   background-color: #870007;
 }
